@@ -1,0 +1,3 @@
+plugin spec 0.0
+gnuchess -x
+chess
